2011-09-22	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/be.c:
	  - declared static functions static

2011-09-21	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* include/aide.h, src/aide.c:
	  - declared static functions static

2011-09-20	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* include/aide.h, src/db_file.c:
	  - fixed format of 8 bytes off_t type

2011-09-17	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/aide.c:
	  - added missing #include <dirent.h>

2011-09-09	Rami Lehti <rami.lehti@bitwise.fi>
	* src/base64.c, src/gen_list.c:
	  - changed verbosity levels to ease debugging

2011-09-07	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/commandconf.c:
	  - added missing spaces to "Cannot access config file" message

2011-09-05	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Added new root_prefix option
	* src/do_md.c:
	  - removed unused function (md_init_fail)

2011-09-04	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* include/gen_list.h, src/gen_list.c:
	  - removed unused functions (add_file_to_list, traverse_tree, gen_list)

2011-09-03	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/gen_list.c:
	  - print list of added files (verbose level >= 2) and their details
	    (verbose level >= 6) if database has been initialized

2011-07-12	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/gen_list.c:
	  - fixed has_str_changed function
	* src/util.c:
	  - fixed bad free of hostname variable
	* src/db_file.c:
	  - removed dead code

2011-04-08	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/gen_list.c:
	  - fixed wrong total number of entries if comparing two databases

2011-03-29	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/compare_db.c:
	  - rewrote gen_report function, changes included:
		- merged gen_report() and report_tree()
		- added info about verbose level, ignorelist and report_attributes to
		  report if they differ from standard value
		- changed report if aide found no changes