@@ -1,6 +1,8 @@
 2011-09-22	Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* src/be.c:
 	  - declared static functions static
+	* src/commandconf.c:
+	  - fixed 'unused-but-set-variable' compiler warning
 
 2011-09-21	Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* include/aide.h, src/aide.c:
